--- a/src/_includes/cats.liquid
+++ b/src/_includes/cats.liquid
@@ -1,131 +1,146 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кокой ты котик</title>
     <style>
-        html {
-            color-scheme: dark light;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            text-align: center;
-        }
-        body {
-            margin: 0;
-            padding: 1em;
-        }
-        ul {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1.5em;
-            justify-content: center;
-            list-style: none;
-            padding: 0;
-        }
-        button {
-            align-items: center;
-            background-color: Canvas;
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;
-            border: 0;
-            border-radius: 1em;
-            cursor: pointer;
-            display: flex;
-            font: inherit;
-            height: 10em;
-            justify-content: center;
-            margin: 0;
-            max-width: 100%;
-            padding: 0;
-            width: 10em;
-        }
-        .winner {
-            height: 15em;
-            position: relative;
-            width: 15em;
-        }
-        .winner::before {
-            content: '👑';
-            position: absolute;
-            top: 0;
-            font-size: 3em;
-            transform: translateY(-60%);
-        }
-        button::after {
-            content: attr(aria-label);
-            background: rgba(0, 0, 0, .75);
-            border-radius: .25em;
-            color: #fff;
-            display: inline-block;
-            opacity: 0;
-            padding: .5em;
-            transition: opacity .3s;
-        }
-        button:focus::after,
-        button:hover::after {
-            opacity: 1;
-        }
-        a {
-            color: inherit;
-            display: inline-block;
-            margin-bottom: .5em;
-        }
+      html {
+        color-scheme: dark light;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+          'Open Sans', 'Helvetica Neue', sans-serif;
+        text-align: center;
+      }
+      body {
+        margin: 0;
+        padding: 1em;
+      }
+      ul {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1.5em;
+        justify-content: center;
+        list-style: none;
+        padding: 0;
+      }
+      button {
+        align-items: center;
+        background-color: Canvas;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        border: 0;
+        border-radius: 1em;
+        cursor: pointer;
+        display: flex;
+        font: inherit;
+        height: 10em;
+        justify-content: center;
+        margin: 0;
+        max-width: 100%;
+        padding: 0;
+        width: 10em;
+      }
+      .winner {
+        height: 15em;
+        position: relative;
+        width: 15em;
+      }
+      .winner::before {
+        content: '👑';
+        position: absolute;
+        top: 0;
+        font-size: 3em;
+        transform: translateY(-60%);
+      }
+      button::after {
+        content: attr(aria-label);
+        background: rgba(0, 0, 0, 0.75);
+        border-radius: 0.25em;
+        color: #fff;
+        display: inline-block;
+        opacity: 0;
+        padding: 0.5em;
+        transition: opacity 0.3s;
+      }
+      button:focus::after,
+      button:hover::after {
+        opacity: 1;
+      }
+      a {
+        color: inherit;
+        display: inline-block;
+        margin-bottom: 0.5em;
+      }
     </style>
-</head>
-<body>
-<header>
-<h1>Кокой ты продуктовый <s>дизайнер</s> котик</h1>
-</header>
-<main>
-<ul>
-{%- for student in collections[page.fileSlug] -%}
-{% unless student.fileSlug == 'example' %}
-<li>
-    <button
-        aria-label="Проголосовать"
-        id="{{ student.fileSlug }}"
-        style="background-image: url('{{ student.data.img }}');"
-        type="button"
-        {% if student.fileSlug == '' %}class="winner"{% endif %}
-    ></button>
-    {{ student.templateContent }}
-</li>
-{% endunless %}
-{%- endfor -%}
-</ul>
-</main>
-<footer>
-    <a href="../../">Сайт воркшопа</a> •
-    <a href="https://metrika.yandex.ru/dashboard?id=89410210" target="_blank">Метрика ↗</a>
-</footer>
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+  </head>
+  <body>
+    <header>
+      <h1>Кокой ты продуктовый <s>дизайнер</s> котик</h1>
+    </header>
+    <main>
+      <ul>
+        {%- for student in collections[page.fileSlug] -%}
+          {% unless student.fileSlug == 'example' %}
+            <li>
+              <button
+                aria-label="Проголосовать"
+                id="{{ student.fileSlug }}"
+                style="background-image: url('{{ student.data.img }}');"
+                type="button"
+                {% if student.fileSlug == '' %}
+                  class="winner"
+                {% endif %}
+              ></button>
+              {{ student.templateContent }}
+            </li>
+          {% endunless %}
+        {%- endfor -%}
+      </ul>
+    </main>
+    <footer>
+      <a href="../../">Сайт воркшопа</a> •
+      <a href="https://metrika.yandex.ru/dashboard?id=89410210" target="_blank">Метрика ↗</a>
+    </footer>
+    <!-- Yandex.Metrika counter -->
+    <script>
+      (function (m, e, t, r, i, k, a) {
+        m[i] =
+          m[i] ||
+          function () {
+            (m[i].a = m[i].a || []).push(arguments);
+          };
+        m[i].l = 1 * new Date();
+        (k = e.createElement(t)),
+          (a = e.getElementsByTagName(t)[0]),
+          (k.async = 1),
+          (k.src = r),
+          a.parentNode.insertBefore(k, a);
+      })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js', 'ym');
 
-    ym(89410210, "init", {
-         clickmap:true,
-         trackLinks:true,
-         accurateTrackBounce:true,
-         webvisor:true
-    });
- </script>
- <noscript><div><img src="https://mc.yandex.ru/watch/89410210" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
- <!-- /Yandex.Metrika counter -->
- <script>
-     function handleClick(e) {
-         ym(89410210,'reachGoal', 'vote');
-         alert('Спасибо! Ваш голос учтен.');
-     }
+      ym(89410210, 'init', {
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true,
+        webvisor: true,
+      });
+    </script>
+    <noscript>
+      <div><img src="https://mc.yandex.ru/watch/89410210" style="position:absolute; left:-9999px;" alt=""></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
+    <script>
+      function handleClick() {
+        ym(89410210, 'reachGoal', 'vote');
+        alert('Спасибо! Ваш голос учтен.');
+      }
 
-     const btns = document.getElementsByTagName('button');
+      const btns = document.getElementsByTagName('button');
 
-     for (const btn of btns) {
-         btn.addEventListener('click', handleClick);
-     }
- </script>
-</body>
+      for (const btn of btns) {
+        btn.addEventListener('click', handleClick);
+      }
+    </script>
+  </body>
 </html>
